# core-pattern-service

./: .env  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: ci.yml  docker.yml
bruno/: bruno.json  get-patterns-weekly.bru  get-patterns.bru  search-patterns.bru
bruno/environments/: dev.bru
drizzle/migrations/: 0001_pattern_result.sql  0002_add_source_type.sql  0003_add_patterns_table.sql  0004_add_product_ids.sql
src/: index.ts  main.py  types.ts  worker.ts
src/__tests__/: routes.test.ts
src/crews/: pattern_crew.py
src/db/: schema.ts
src/llm/: cloudflare_workers_ai.py
src/middleware/: jwt.ts
src/routes/: patterns.ts
