[project]
name = "crow-pattern-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "crewai>=0.80.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pyarrow>=19.0.0,<23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
